# MadaMesh

./: README.md  mada_mesh_test  settings.gradle
.github/workflows/: android.yml
android/app/src/main/cpp/: CMakeLists.txt  mesh_engine.hpp  native-lib.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/v0id/madamesh/: MainActivity.java
app/src/main/res/values/: strings.xml
core/: main.cpp  mesh_engine.cpp
